<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AndroidSNMPDemo</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Please confirm your IP address and Search</string>
    <string name="currentIpAddress">Current IP Address</string>
    <string name="Search">Search Devices</string>
    <string name="Dev_Found">Founded Devices:</string>
    <string name="title_activity_control">Control</string>
    <string name="start_control">Start Control</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="targetIp">Target IP</string>
    <string name="currentLuminosity">Current Luminosity</string>
    <string name="LuminosityValue">N/A</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="current_color">"Current Color: "</string>
    <string name="ObjDistence">Object Distence</string>
    <string name="color">Color</string>

</resources>
