<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ControlActivity" >

    <TextView
        android:id="@+id/textViewTargetIp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView3"
        android:layout_below="@+id/seekBarBlue"
        android:layout_marginTop="15dp"
        android:text="@string/targetIp" />

    <TextView
        android:id="@+id/textViewLuminosity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewTargetIp"
        android:layout_below="@+id/textViewTargetIp"
        android:text="@string/currentLuminosity" />

    <TextView
        android:id="@+id/textViewLuminosityValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textViewLuminosity"
        android:layout_alignBottom="@+id/textViewLuminosity"
        android:layout_marginLeft="14dp"
        android:layout_toRightOf="@+id/textViewLuminosity"
        android:text="@string/LuminosityValue" />

    <TextView
        android:id="@+id/textViewColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewLuminosity"
        android:layout_below="@+id/textViewLuminosity"
        android:text="@string/current_color" />

    <TextView
        android:id="@+id/textViewObjDistence"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewColor"
        android:layout_below="@+id/textViewColor"
        android:text="@string/ObjDistence" />

    <TextView
        android:id="@+id/textViewObjDistenceValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textViewObjDistence"
        android:layout_alignBottom="@+id/textViewObjDistence"
        android:layout_alignLeft="@+id/textViewLuminosityValue"
        android:text="@string/LuminosityValue" />

    <SeekBar
        android:id="@+id/seekBarRed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/toggleButtonPower"
        android:layout_below="@+id/toggleButtonPower"
        android:max="@integer/maxColorValue"
        android:progress="@integer/defaultColorValue" />

    <TextView
        android:id="@+id/textFoundedDevices"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/toggleButtonPower"
        android:layout_below="@+id/seekBarRed"
        android:text="@string/red" />

    <SeekBar
        android:id="@+id/seekBarGreen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/toggleButtonPower"
        android:layout_below="@+id/textFoundedDevices"
        android:max="@integer/maxColorValue"
        android:progress="@integer/defaultColorValue" />

    <TextView
        android:id="@+id/textMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/toggleButtonPower"
        android:layout_below="@+id/seekBarGreen"
        android:text="@string/green" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/toggleButtonPower"
        android:layout_below="@+id/textMessage"
        android:text="@string/blue" />

    <SeekBar
        android:id="@+id/seekBarBlue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/toggleButtonPower"
        android:layout_below="@+id/textView3"
        android:max="@integer/maxColorValue"
        android:progress="@integer/defaultColorValue" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="Power" />

    <ToggleButton
        android:id="@+id/toggleButtonPower"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView1"
        android:text="ToggleButton" />

    <ToggleButton
        android:id="@+id/toggleButtonUltraSnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/seekBarRed"
        android:layout_toRightOf="@+id/toggleButtonPower"
        android:text="ToggleButton" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/toggleButtonPower"
        android:layout_toRightOf="@+id/toggleButtonPower"
        android:text="UltraSound" />

    <Button
        android:id="@+id/buttonColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/toggleButtonUltraSnd"
        android:layout_alignRight="@+id/seekBarRed"
        android:text="@string/color" />

</RelativeLayout>